exports[`<CompaniesFilter /> should render favorite filter correctly 1`] = `
<MenuItem
  checked={false}
  desktop={false}
  disabled={false}
  focusState="none"
  insetChildren={false}
  leftIcon={<ToggleRadioButtonChecked />}
  primaryText="Show Favorite Companies"
  value="favorite" />
`;

exports[`<CompaniesFilter /> should render show all companies correctly 1`] = `
<MenuItem
  checked={false}
  desktop={false}
  disabled={false}
  focusState="none"
  insetChildren={false}
  leftIcon={<ToggleRadioButtonChecked />}
  primaryText="Show All Companies"
  value="all" />
`;

exports[`<CompaniesFilter /> should render show custom filter correctly 1`] = `
<MenuItem
  checked={false}
  desktop={false}
  disabled={false}
  focusState="none"
  insetChildren={false}
  leftIcon={<ToggleRadioButtonChecked />}
  primaryText="Show Selected Companies"
  value="custom" />
`;

exports[`<CompaniesFilter /> should render show custom filter correctly 2`] = `
<div
  data-id="companies">
  <Checkbox
    checked={true}
    disabled={false}
    label="Airbnb"
    labelPosition="right"
    onCheck={[Function]}
    value="Airbnb" />
  <Checkbox
    checked={false}
    disabled={false}
    label="Adidas"
    labelPosition="right"
    onCheck={[Function]}
    value="Adidas" />
  <Checkbox
    checked={false}
    disabled={false}
    label="Tinder"
    labelPosition="right"
    onCheck={[Function]}
    value="Tinder" />
  <Checkbox
    checked={false}
    disabled={false}
    label="Fedex"
    labelPosition="right"
    onCheck={[Function]}
    value="Fedex" />
</div>
`;
